Updated UI of the Mission & Vision page based on errors

--- a/css/Contact-Us-style.css
+++ b/css/Contact-Us-style.css
@@ -365,6 +365,7 @@
             text-align: center;
             color: #252732;
             width: 100%;
+}
 
         .contact-section {
             display: flex;
@@ -375,4 +376,4 @@
         .contact-table {
             margin: 0 auto;
 
-            
+        }
