Made changes to UI for consistency

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,8 +1,11 @@
 <footer>
     <div class="footer-columns">
-        <div>
-            <img src="images/ph-seal.png" alt="ph-seal" width="90" />
-            <p>REPUBLIC OF THE PHILIPPINES<br />All content is in the public domain unless otherwise stated.</p>
+        <div class="footer-seal-section">
+            <img src="images/ph-seal.png" alt="ph-seal" />
+            <div>
+                <h4>REPUBLIC OF THE PHILIPPINES</h4>
+                <p>All content is in the public domain unless otherwise stated.</p>
+            </div>
         </div>
         <div>
             <h4>ABOUT GOVPH</h4>
@@ -24,4 +27,3 @@
         </div>
     </div>
 </footer>
-</template>
