--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,12 +1,12 @@
 <header class="navbar">
     <div class="logo">
-        <img src="images/logo.png" alt="DOST Logo" />
+        <img src="../images/logo.png" alt="DOST Logo" />
         <span>DOST - ASTI</span>
     </div>
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="mission-vision.html">Mission & Vision</a></li>
             <li><a href="about-gates.html">About Gates</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
