--- a/css/ai.css
+++ b/css/ai.css
@@ -51,7 +51,7 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
-    height: 400px;
+    min-height: 400px; /* Changed from height to min-height */
     padding: 0 20px 20px 20px;
     color: white;
     border-radius: 0px;
