--- a/css/lakehouse.css
+++ b/css/lakehouse.css
@@ -50,7 +50,7 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
-    height: 400px;
+    min-height: 400px;
     padding: 0 20px 20px 20px;
     color: white;
     border-radius: 0px;
