--- a/css/components.css
+++ b/css/components.css
@@ -88,6 +88,10 @@ nav ul {
     align-items: center;
 }
 
+nav ul li a:hover {
+    background-color: rgba(255,255,255,0.1);
+}
+
 nav a {
     color: white;
     text-decoration: none;
@@ -100,6 +104,7 @@ nav a {
 .search-container {
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .search-container input[type="text"] {
