--- a/css/ai.css
+++ b/css/ai.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap');
 
+html {
+    scroll-behavior: smooth; /* Smooth scrolling for anchor links */
+}
 
 .team-name {
     font-size: 2.5rem;
@@ -79,7 +82,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 250px;
+    max-width: 400px;
     background-color: #F6F6F6;
     padding: 50px;
     padding-top: 25px;
@@ -115,6 +118,7 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: normal;
+    text-align: justify;
 }
 
 .card .profile-pic {
