--- a/components/navbar.html
+++ b/components/navbar.html
@@ -8,8 +8,8 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="mission-vision.html">Mission & Vision</a></li>
-            <li><a href="about-gates.html">About Gates</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="about.html">About Gates</a></li>
+            <li><a href="Contact-us.html">Contact Us</a></li>
             <li>
                 <div class="search-container">
                     <input type="text" placeholder="Search...">
