--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -115,7 +115,7 @@ nav a {
 
 nav a:hover,
 nav a.active {
-    background-color: #FED349;
+    background-color: rgb(255, 255, 255, 0.1);
 }
 
 /* About Section */
