--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,28 +1,14 @@
-
-<<<<<<< HEAD
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="mission-vision.html">Mission & Vision</a></li>
-            <li><a href="about.html">About Gates</a></li>
-            <li><a href="Contact-us.html">Contact Us</a></li>
-            <li>
-                <div class="search-container">
-                    <input type="text" placeholder="Search...">
-                    <button type="submit">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </div>
-            </li>
-        </ul>
-    </nav>
-</header>
-=======
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!-- ...existing code... -->
+
 </head>
+
+
+
+</head>
+
 <body>
     <header class="navbar">
         <div class="logo">
@@ -32,10 +18,10 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="mission-vision.html">Mission & Vision</a></li>
-                <li><a href="about-gates.html">About Gates</a></li>
-                <li><a href="Contact-Us.html">Contact Us</a></li>
+                <li><a href="../html/index.html">Home</a></li>
+                <li><a href="../html/mission-vision.html">Mission & Vision</a></li>
+                <li><a href="../html/about-gates.html">About Gates</a></li>
+                <li><a href="../html/contact-us.html">Contact Us</a></li>
                 <li>
                     <div class="search-container">
                         <input type="text" placeholder="Search..." autocomplete="off">
@@ -50,5 +36,5 @@
 
     <script src="js/redirect.js" defer></script>
 </body>
+
 </html>
->>>>>>> 629594467817b74e8b6c25b4fb1dcb282634b06b
