Added interns page

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -18,7 +18,7 @@
 
         <nav>
             <ul>
-                <li><a href="../html/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="../html/mission-vision.html">Mission & Vision</a></li>
                 <li><a href="../html/about-gates.html">About Gates</a></li>
                 <li><a href="../html/contact-us.html">Contact Us</a></li>
