--- a/css/Contact-Us-style.css
+++ b/css/Contact-Us-style.css
@@ -226,6 +226,7 @@
             margin: 2rem auto;
             padding: 0 20px;
             box-sizing: border-box;
+            font-family: "Open Sans", Helvetica, sans-serif;
             }
 
 
