--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,40 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+<header class="navbar">
+    <div class="logo">
+        <img src="../images/logo.png" alt="DOST-ASTI Logo" />
+        <span>DOST - ASTI</span>
+    </div>
 
-<head>
-
-</head>
-
-
-
-</head>
-
-<body>
-    <header class="navbar">
-        <div class="logo">
-            <img src="../images/logo.png" alt="DOST-ASTI Logo" />
-            <span>DOST - ASTI</span>
-        </div>
-
-        <nav>
-            <ul>
-                <li><a href="../html/index.html">Home</a></li>
-                <li><a href="../html/mission-vision.html">Mission & Vision</a></li>
-                <li><a href="../html/about-gates.html">About Gates</a></li>
-                <li><a href="../html/contact-us.html">Contact Us</a></li>
-                <li>
-                    <div class="search-container">
-                        <input type="text" placeholder="Search..." autocomplete="off">
-                        <button type="submit">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-    <script src="js/redirect.js" defer></script>
-</body>
-
-</html>
+    <!-- 🔽 IMPORTANT: Add class="nav" here -->
+    <nav class="nav">
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../html/mission-vision.html">Mission & Vision</a></li>
+            <li><a href="../html/about-gates.html">About Gates</a></li>
+            <li><a href="../html/contact-us.html">Contact Us</a></li>
+            <li>
+                <div class="search-container">
+                    <input type="text" placeholder="Search..." autocomplete="off">
+                    <button type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </li>
+        </ul>
+    </nav>
+</header>
