--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -67,7 +67,7 @@ nav ul li a:hover {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-.navbar a.active {
+.nav a.active {
     border-bottom: 3px solid #e8cd36;
     color: #e8cd36;
     font-weight: bold;
@@ -135,7 +135,7 @@ footer {
     background-color: #1f1f2e;
     color: white;
     padding: 40px 30px;
-    margin-top: 60px;
+    margin-top: 0px;
     font-weight: 300;
     font-family: "Open Sans", sans-serif;
 }
