--- a/css/interns.css
+++ b/css/interns.css
@@ -79,15 +79,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 250px;
+    max-width: 400px;
     background-color: #F6F6F6;
     padding: 50px;
     padding-top: 25px;
     border-radius: 30px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
     transform: translateY(50%);
-    position: relative; /* Added to ensure profile cards appear above the overlay */
-    z-index: 2; /* Above the blue overlay */
+    position: relative;
+    /* Added to ensure profile cards appear above the overlay */
+    z-index: 2;
+    /* Above the blue overlay */
 }
 
 .profile-card:hover {
