--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!-- ...existing code... -->
+
 </head>
+
+
+
+</head>
+
 <body>
     <header class="navbar">
         <div class="logo">
@@ -12,10 +18,10 @@
 
         <nav>
             <ul>
-                <li><a href="../html/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="../html/mission-vision.html">Mission & Vision</a></li>
                 <li><a href="../html/about-gates.html">About Gates</a></li>
-                <li><a href="../html/Contact-Us.html">Contact Us</a></li>
+                <li><a href="../html/contact-us.html">Contact Us</a></li>
                 <li>
                     <div class="search-container">
                         <input id="searchInput" type="text" placeholder="Search..." autocomplete="off">
@@ -31,4 +37,5 @@
 
     <script src="js/redirect.js" defer></script>
 </body>
+
 </html>
