--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -64,7 +64,13 @@ nav ul {
 }
 
 nav ul li a:hover {
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.navbar a.active {
+    border-bottom: 3px solid #e8cd36;
+    color: #e8cd36;
+    font-weight: bold;
 }
 
 nav a {
@@ -121,52 +127,7 @@ nav a {
 
 nav a:hover,
 nav a.active {
-    background-color: #FED349;
-}
-
-/* About Section */
-
-/* Team Cards Section */
-
-
-
-
-
-
-.card button {
-    background-color: rgba(28, 29, 37, 0.9);
-    border: 2px solid white;
-    color: white;
-    padding: 12px 24px;
-    border-radius: 8px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-weight: 700;
-    font-size: 1.1rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.card:hover button {
-    background-color: white;
-    color: #1c1d25;
-}
-
-/* Background images */
-.card.management {
-    background-image: url('../images/management.jpg');
-}
-
-.card.platform {
-    background-image: url('../images/platform.jpg');
-}
-
-.card.ai {
-    background-image: url('../images/ai.jpg');
-
-}
-
-.card.lakehouse {
-    background-image: url('../images/lakehouse.jpg');
+    background-color: rgb(255, 255, 255, 0.1);
 }
 
 /* Footer styles */
@@ -182,17 +143,14 @@ footer {
 footer a {
     color: white;
     text-decoration: none;
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 0;
     letter-spacing: 0.3px;
     transition: color 0.3s, text-shadow 0.3s;
 }
+
 footer a:visited {
     color: white;
-}
-footer a:hover {
-    color: #FED349;
-    text-shadow: 0 0 8px #FED349, 0 0 16px #FED349;
 }
 
 .footer img.seal {
@@ -254,7 +212,8 @@ footer a:hover {
 
 .footer-seal-section img {
     flex-shrink: 0;
-    margin-bottom: 0; /* Override the general footer img margin */
+    margin-bottom: 0;
+    /* Override the general footer img margin */
     padding-right: 30px;
 }
 
