--- a/css/interns.css
+++ b/css/interns.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap');
 
-html {
-    scroll-behavior: smooth; /* Smooth scrolling for anchor links */
-}
-
-
 .team-name {
     font-size: 2.5rem;
     font-weight: bold;
@@ -36,6 +31,7 @@ html {
     bottom: 10px;
 }
 
+
 .team-description {
     font-family: "Open Sans Condensed";
     font-size: 20px;
@@ -55,7 +51,7 @@ html {
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
-    min-height: 400px; /* Changed from height to min-height */
+    min-height: 400px;
     padding: 0 20px 20px 20px;
     color: white;
     border-radius: 0px;
@@ -64,8 +60,7 @@ html {
     flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 300px;
-    position: relative;
-    /* Added for overlay positioning */
+    position: relative; /* Added for overlay positioning */
 }
 
 .card::before {
@@ -75,12 +70,9 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #FED349;
-    /* Default blue color */
-    opacity: 0.3;
-    /* Semi-transparent blue overlay */
-    z-index: 1;
-    /* Behind the profile cards but over the background image */
+    background-color: rgba(225, 149, 9, 0.374);
+    opacity: 0.5;
+    z-index: 1; 
 }
 
 .profile-card {
@@ -125,7 +117,6 @@ html {
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: normal;
-    text-align: justify;
 }
 
 .card .profile-pic {
