--- a/components/navbar.html
+++ b/components/navbar.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <!-- ...existing code... -->
-</head>
 <body>
     <header class="navbar">
         <div class="logo">
-            <img src="../images/logo.png" alt="DOST-ASTI Logo" />
-            <span>DOST - ASTI</span>
+            <a href="../index.html">
+                <img src="../images/logo.png" alt="DOST-ASTI Logo" />
+                <span>DOST - ASTI</span>
+            </a>
         </div>
 
         <nav>
