--- a/css/ai.css
+++ b/css/ai.css
@@ -65,7 +65,10 @@ html {
     gap: 20px;
     margin-bottom: 300px;
     position: relative;
-    /* Added for overlay positioning */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .card::before {
@@ -100,11 +103,13 @@ html {
     /* Above the blue overlay */
 }
 
+/*
 .profile-card:hover {
     color: #1c1d25;
     transform: translateY(48%) translateX(2px);
     transition: transform 0.3s ease, color 0.3s ease;
 }
+    */
 
 .card .profile-description .name {
     font-size: 20px;
@@ -134,6 +139,7 @@ html {
     border-radius: 50%;
     border: 5px solid black;
     margin-bottom: 10px;
+    object-fit: cover;
 }
 
 .card .profile-description {
