--- a/css/ai.css
+++ b/css/ai.css
@@ -59,8 +59,6 @@ html {
     padding: 0 20px 20px 20px;
     color: white;
     border-radius: 0px;
-    background-size: cover;
-    background-position: center;
     flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 300px;
@@ -91,6 +89,8 @@ html {
     flex-direction: column;
     align-items: center;
     max-width: 400px;
+    max-height: 750px;
+    min-height: auto;
     background-color: #F6F6F6;
     padding: 50px;
     padding-top: 25px;
@@ -100,7 +100,6 @@ html {
     position: relative;
     /* Added to ensure profile cards appear above the overlay */
     z-index: 2;
-    /* Above the blue overlay */
 }
 
 /*
@@ -116,12 +115,14 @@ html {
     font-weight: bold;
     margin: 5px 0;
     color: black;
+    text-align: center;
 }
 
 .card .profile-description .position {
     font-style: italic;
     margin: 5px 0;
     color: black;
+    text-align: center;
 }
 
 .card .profile-description p {
