Tab Icon + Fixes
Fixed some issues where webpages would not load correctly when redirected, and added an icon that shows up on the tab of the broswer

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -6,16 +6,16 @@
 <body>
     <header class="navbar">
         <div class="logo">
-            <img src="images/logo.png" alt="DOST-ASTI Logo" />
+            <img src="/GATES-Website-Aug-4/images/logo.png" alt="DOST-ASTI Logo" />
             <span>DOST - ASTI</span>
         </div>
 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="html/mission-vision.html">Mission & Vision</a></li>
-                <li><a href="html/about-gates.html">About Gates</a></li>
-                <li><a href="html/contact-us.html">Contact Us</a></li>
+                <li><a href="/GATES-Website-Aug-4/index.html">Home</a></li>
+                <li><a href="/GATES-Website-Aug-4/html/mission-vision.html">Mission & Vision</a></li>
+                <li><a href="/GATES-Website-Aug-4/html/about-gates.html">About Gates</a></li>
+                <li><a href="/GATES-Website-Aug-4/html/contact-us.html">Contact Us</a></li>
                 <li>
                     <div class="search-container">
                         <input type="text" placeholder="Search..." autocomplete="off">
